// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cast.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

$bar = (int) $foo;
$bar = (integer) $foo;
$bar = (bool) $foo;
$bar = (boolean) $foo;
$bar = (float) $foo;
$bar = (double) $foo;
$bar = (real) $foo;
$bar = (array) $foo;
$bar = (object) $foo;
$bar = (unset) $foo;

$bar = ( int ) $foo;
$bar = (  int  )  $foo;

$binary = (binary) $string;
$binary = b"binary string";
$binary = b'binary string';
$binary = "b'binary string'";
$binary = 'b"binary string"';

=====================================output=====================================
<?php

$bar = (int) $foo;
$bar = (int) $foo;
$bar = (bool) $foo;
$bar = (bool) $foo;
$bar = (float) $foo;
$bar = (float) $foo;
$bar = (float) $foo;
$bar = (array) $foo;
$bar = (object) $foo;
$bar = (unset) $foo;

$bar = (int) $foo;
$bar = (int) $foo;

$binary = (binary) $string;
$binary = b"binary string";
$binary = b'binary string';
$binary = "b'binary string'";
$binary = 'b"binary string"';

================================================================================
`;

exports[`singe.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

(int) '1';

=====================================output=====================================
<?php

(int) '1';

================================================================================
`;
